Safari has bug with background-clip text and letter-spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -276,6 +276,11 @@ nav {
         letter-spacing: -1.8px;
         font-family: $slab;
     }
+    .r, .f, .d{
+        //   Safari can't render background-clip: text & letter-spacing together so we add padding
+            padding-right: 5px;
+        }
+
     .n {
         letter-spacing: -3px;
         margin-right: 16px;
